# agrivision

./: .gitignore  49-agr.rules  Cargo.toml  README.md  agriconf.toml  agrivision.toml  config.toml  config.toml.bk  config.toml.bk2  flake.nix
.cargo/: config.toml
migrations/: 20240503142743_init.sql
orangepi3b/: index.html  main.js
orangrpi3b:/: index.html  main.js
orangrpi3b:/styles/: main.css
report/: .gitignore  abbr.ods  main.bcf  main.run.xml  main.tex  uc-descriptions.ods  ĐC_Phạm Văn Dũng_Xây dựng hệ thống giám sát trồng nấm sử dụng thị giác máy tính_draft(1).docx
report/content/: ch1.tex  ch2.tex  ch3.tex  ch4.tex  ch6.tex
report/essential/: appendix.tex  cover.tex  cover2.tex  glossaries.tex  intro.tex  pledge.tex  refs.bib  thanks.tex  toa.tex  toc.tex  tof.tex  tor.tex  tot.tex
report/meta/: chapter-mark.tex  font.tex  listing.tex  paper.tex
src/: actuator.rs  camera.rs  capture.rs  client.rs  config.rs  control.rs  database.rs  gateway.rs  http.rs  linears.rs  main.rs  message.rs  settings.rs  system.rs  vision.rs  water.rs  yolo.rs
src/actuator/: linear.rs  stepper.rs  switcher.rs
src/client/: action.rs  camera.rs  create.rs  delete.rs  msg.rs  show.rs  update.rs
src/system/: actuator.rs  camera.rs  detection_result.rs  detector.rs  gpio_pin.rs  linear.rs  watering.rs
src/system/actuator/: camera.rs  gpio_pin.rs  linear.rs  watering.rs
src/system/detector/: local_yolov8.rs  robo_inference.rs  yolov8_algorithm.rs
static/: index.html  login.html  main.js  styles.css
static/styles/: main.css
templates/: base.html  card.html  checking-config.html  dashboard.html  detail-checking-config.html  detail-general.html  detail-positions.html  detail-pot.html  detail-users.html  login.html  main.html  manage-position.html  manage-stage.html  manage-user.html  modal-new-position.html  position-management.html  position.html  side-pane-tab.html  static.html  user-management.html
templates/static/: main.css  main.js
