[package]
name = "agrivision"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.2", features = [ "derive" ] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = "1.0.105"
toml = "0.8.8"
tide = "0.16.0"
#ureq = { version = "2.9.1", default-features = false }
base58 = "0.2.0"
rand = "0.8.5"
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-transformers = "0.4.1"
image = "0.25.1"
imageproc = "0.24.0"
tracing = "0.1.40"
once_cell = "1.19.0"
log = "0.4.20"
simple_logger = "4.3.0"
v4l = "0.14.0"
pin-project-lite = "0.2.13"
futures-lite = "2.1.0"
gpio-cdev = "0.6.0"
embedded-hal = "1"
linux-embedded-hal = "0.4.0"
derive-getters = "0.3.0"
async-executor = "1.8.0"
base64 = "0.22.0"
#derivative = "2.2.0"
auto_impl = "1.2.0"

[features]
dummy_actuators = []
