[package]
name = "agrivision"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
tide = "0.16.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.2", features = [ "derive" ] }
serde = { version = "1.0.188", default-features = false, features = ["derive"] }
serde_json = "1.0.105"
gpio-cdev = "0.6.0"
v4l = "0.14.0"
embedded-hal = "1"
linux-embedded-hal = "0.4.0"
toml = "0.8.8"
rand = "0.8.5"
candle-core = "0.5"
candle-nn = "0.5"
candle-transformers = "0.5"
image = "0.25.1"
imageproc = "0.24.0"
tracing = "0.1.40"
once_cell = "1.19.0"
log = "0.4.20"
simple_logger = "5"
derive-getters = "0.4.0"
base64 = "0.22.0"
surf = { version = "2", features = [ "h1-client-rustls" ] }
openssl-sys = { version = "0.9.102", features = ["vendored"] }
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-async-std"] }
askama = { version = "0.12.1", features = ["with-tide"] }
askama_tide = "0.15.0"
variation = "0.1.1"
futures = "0.3.30"
time = "0.3.36"
